movie adding feature

--- a/src/index.html
+++ b/src/index.html
@@ -45,26 +45,26 @@
 
 <div class="popup">
     <div id="formContainer">
-        <div>
+        <div class="formContainerGroup">
             <h2>Add a new movie</h2>
-            <form autoComplete="off" class="form" onsubmit="" >
-                <p class="alertInfo"></p>
-                <label>Title</label>
-                <input type="text" id="title" name="title" placeholder="Enter title"/>
-                <p class="titleParagraph"></p>
-                <label>Year</label>
-                <input type="text" class="year"  name="numbers" placeholder="Enter year" />
-                <p class="yearParagraph"></p>
-                <label>Genre</label>
-                <input name="genre" placeholder="Enter genre"/>
-                <p class="genreParagraph"></p>
-                <label>Description</label>
-                <textarea tag="textarea" name="description" placeholder="Enter whatever you want..."></textarea>
-                <div class="factorGroup">
-                    <button type="submit" class="factor submit-btn">Add</button>
-                    <button class="factor btnCancel">Cancel</button>
-                </div>
-            </form>
+<!--            <form autoComplete="off" class="form" onsubmit="" >-->
+<!--                <p class="alertInfo"></p>-->
+<!--                <label>Title</label>-->
+<!--                <input type="text" id="title" name="title" placeholder="Enter title"/>-->
+<!--                <p class="titleParagraph"></p>-->
+<!--                <label>Year</label>-->
+<!--                <input type="text" class="year"  name="numbers" placeholder="Enter year" />-->
+<!--                <p class="yearParagraph"></p>-->
+<!--                <label>Genre</label>-->
+<!--                <input name="genre" placeholder="Enter genre"/>-->
+<!--                <p class="genreParagraph"></p>-->
+<!--                <label>Description</label>-->
+<!--                <textarea tag="textarea" name="description" placeholder="Enter whatever you want..."></textarea>-->
+<!--                <div class="factorGroup">-->
+<!--                    <button type="submit" class="factor submit-btn">Add</button>-->
+<!--                    <button class="factor btnCancel">Cancel</button>-->
+<!--                </div>-->
+<!--            </form>-->
         </div>
         <img class="popupImg"  src="assets/undraw_pink.svg"/>
     </div>
